--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIMBzdHcDK372t2MMWNUzc",
+      "authorship_tag": "ABX9TyNQ5Oj7zvjTuhR6dop9vHV3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 227,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "09ee678c-ea90-434e-e757-3f07b82cd77e"
+        "outputId": "94e5608a-3f43-4365-bf8a-eb8dedb19a98"
       },
       "outputs": [
         {
@@ -49,8 +49,95 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e2\n",
             "7 4\n",
-            "0 4\n"
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e7\n",
+            "0 4\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e3\n",
+            "6 4\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e6\n",
+            "6 3\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e4\n",
+            "5 4\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "e5\n",
+            "5 3\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "f4\n",
+            "4 4\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "f5\n",
+            "4 3\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n"
           ]
         }
       ],
@@ -101,6 +188,8 @@
         "\n",
         "white_king = Piece(7, 4) # e1\n",
         "black_king = Piece(0, 4) # e8\n",
+        "start_chess_list = [white_king, black_king]\n",
+        "\n",
         "\n",
         "class Game:\n",
         "  def __init__(self):\n",
@@ -115,17 +204,15 @@
         "  def board(self, board):\n",
         "    self.__new_board.board = board\n",
         "\n",
-        "  def start_chess_list(self):\n",
-        "    return self.__chess_pieces\n",
-        "\n",
-        "\n",
         "  def start(self):\n",
         "    for piece in self.__chess_pieces:\n",
         "      self.__new_board.set_piece(piece.x, piece.y)\n",
         "\n",
+        "  def delete_start_piece(self, x, y):\n",
+        "    self.__new_board.delete_piece(x, y)\n",
+        "\n",
         "\n",
         "  def move(self, item, x_new, y_new):\n",
-        "    self.__start_black_item = item\n",
         "    for piece in self.__chess_pieces:\n",
         "      if piece == item:\n",
         "        print(piece.x, piece.y)\n",
@@ -151,6 +238,9 @@
         "  def start(self):\n",
         "    self.__game.start()\n",
         "\n",
+        "  def delete_start_piece(self, x, y):\n",
+        "    self.__game.delete_start_piece(x, y)\n",
+        "\n",
         "  def move(self, item, x_new, y_new):\n",
         "    self.__game.move(item, x_new, y_new)\n",
         "\n",
@@ -160,7 +250,6 @@
         "    self.__player1 = Player('alex', 0)\n",
         "    self.__player2 = Player('ann', 1)\n",
         "    self.__color = True\n",
-        "    self.__start_black_item = None\n",
         "\n",
         "  def __str__(self):\n",
         "    if self.__color == True:\n",
@@ -172,9 +261,6 @@
         "    self.__player1.start()\n",
         "    self.__player2.start()\n",
         "\n",
-        "  def start_chess_list(self):\n",
-        "    for p in self.__player1.game.start_chess_list():\n",
-        "      print(p.x, p.y)\n",
         "\n",
         "  def move_white_player(self, item, x, y):\n",
         "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
@@ -185,7 +271,9 @@
         "    self.__player1.move(item, x_new, y_new)\n",
         "\n",
         "  def move_black_player(self, item, x, y):\n",
-        "    self.__start_black_item = item\n",
+        "    for p in start_chess_list:\n",
+        "      if p == item:\n",
+        "        self.__player1.delete_start_piece(p.x, p.y)\n",
         "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
         "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
         "    y_new = int(horizontal[x])\n",
@@ -208,7 +296,38 @@
         "p = Play()\n",
         "p.start()\n",
         "print(p)\n",
-        "p.start_chess_list()"
+        "print('---------------------------')\n",
+        "p.move_white_player(white_king, 'e', '2')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '7')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'e', '3')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '6')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'e', '4')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'e', '5')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_white_player(white_king, 'f', '4')\n",
+        "print(p)\n",
+        "print('---------------------------')\n",
+        "p.rotate_board()\n",
+        "p.move_black_player(black_king, 'f', '5')\n",
+        "print(p)\n",
+        "print('---------------------------')"
       ]
     }
   ]
