--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdgJSD5S+aVp/TOOcpY3OU",
+      "authorship_tag": "ABX9TyPhGdMn1Icd0kjAW82h9Xx7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "dac9daff-a4ec-49ca-f090-143073d61125"
+        "outputId": "8e2ded38-2213-4745-d262-b8a333611574"
       },
       "outputs": [
         {
@@ -60,6 +60,15 @@
             " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
             "e7\n",
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
@@ -68,68 +77,7 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e3\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e6\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e4\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e5\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "f4\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 1. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "f5\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 1. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n"
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
           ]
         }
       ],
@@ -157,9 +105,14 @@
         "\n",
         "\n",
         "class Piece:\n",
-        "  def __init__(self, x, y):\n",
+        "  def __init__(self, name, x, y):\n",
+        "    self.__name = name\n",
         "    self.__x = x\n",
         "    self.__y = y\n",
+        "\n",
+        "  @property\n",
+        "  def name(self):\n",
+        "    return self.__name\n",
         "\n",
         "  @property\n",
         "  def x(self):\n",
@@ -178,15 +131,10 @@
         "    self.__y = y\n",
         "\n",
         "\n",
-        "white_king = Piece(7, 4) # e1\n",
-        "black_king = Piece(0, 4) # e8\n",
-        "start_chess_list = [white_king, black_king]\n",
-        "\n",
-        "\n",
         "class Game:\n",
-        "  def __init__(self):\n",
+        "  def __init__(self, list_pieces):\n",
         "    self.__new_board = Board()\n",
-        "    self.__chess_pieces = [white_king, black_king]\n",
+        "    self.__chess_pieces = list_pieces\n",
         "\n",
         "  @property\n",
         "  def board(self):\n",
@@ -205,17 +153,17 @@
         "\n",
         "  def move(self, item, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
-        "      if piece == item:\n",
+        "      if piece.name == item:\n",
         "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
         "        piece.y = y_new\n",
         "\n",
         "class Player:\n",
-        "  def __init__(self, name, color):\n",
+        "  def __init__(self, name, color, list_pieces):\n",
         "    self.__name = name\n",
         "    self.__color = color\n",
-        "    self.__game = Game()\n",
+        "    self.__game = Game(list_pieces)\n",
         "\n",
         "  @property\n",
         "  def game(self):\n",
@@ -236,9 +184,9 @@
         "\n",
         "\n",
         "class Play:\n",
-        "  def __init__(self):\n",
-        "    self.__player1 = Player('alex', 0)\n",
-        "    self.__player2 = Player('ann', 1)\n",
+        "  def __init__(self, list_pieces):\n",
+        "    self.__player1 = Player('alex', 0, list_pieces)\n",
+        "    self.__player2 = Player('ann', 1, list_pieces)\n",
         "    self.__color = True\n",
         "\n",
         "  def __str__(self):\n",
@@ -247,28 +195,13 @@
         "    else:\n",
         "      return str(self.__player2.game.board)\n",
         "\n",
+        "  @property\n",
+        "  def player1(self):\n",
+        "    return self.__player1\n",
+        "\n",
         "  def start(self):\n",
         "    self.__player1.start()\n",
         "    self.__player2.start()\n",
-        "\n",
-        "  def move_white_player(self, item, x, y):\n",
-        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
-        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
-        "    y_new = int(horizontal[x])\n",
-        "    x_new = int(vertical[y])\n",
-        "    print(f'{x}{y}')\n",
-        "    self.__player1.move(item, x_new, y_new)\n",
-        "\n",
-        "  def move_black_player(self, item, x, y):\n",
-        "    for p in start_chess_list:\n",
-        "      if p == item:\n",
-        "        self.__player1.delete_start_piece(p.x, p.y)\n",
-        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
-        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
-        "    y_new = int(horizontal[x])\n",
-        "    x_new = int(vertical[y])\n",
-        "    print(f'{x}{y}')\n",
-        "    self.__player2.move(item, x_new, y_new)\n",
         "\n",
         "  def rotate_board(self):\n",
         "    if self.__color:\n",
@@ -280,43 +213,74 @@
         "      self.__player1.game.board = np.rot90(board, 2)\n",
         "      self.__color = True\n",
         "\n",
+        "  def move_white_player(self, item, x, y):\n",
+        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
+        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
+        "    y_new = int(horizontal[x])\n",
+        "    x_new = int(vertical[y])\n",
+        "    print(f'{x}{y}')\n",
+        "    self.__player1.move(item, x_new, y_new)\n",
+        "\n",
+        "  def move_black_player(self, item, x, y):\n",
+        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
+        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
+        "    y_new = int(horizontal[x])\n",
+        "    x_new = int(vertical[y])\n",
+        "    print(f'{x}{y}')\n",
+        "    self.__player2.move(item, x_new, y_new)\n",
         "\n",
         "\n",
-        "p = Play()\n",
-        "p.start()\n",
-        "print(p)\n",
+        "class ListPieces:\n",
+        "  def __init__(self):\n",
+        "    self.__white_king = Piece('white_king', 7, 4) # e1\n",
+        "    self.__black_king = Piece('black_king', 0, 4) # e8\n",
+        "    self.__start_chess_list = [self.__white_king, self.__black_king]\n",
+        "\n",
+        "  @property\n",
+        "  def start_chess_list(self):\n",
+        "    return self.__start_chess_list\n",
+        "\n",
+        "\n",
+        "class Service:\n",
+        "  def __init__(self):\n",
+        "    self.list_pieces = ListPieces()\n",
+        "    self.play = Play(self.list_pieces.start_chess_list)\n",
+        "\n",
+        "  def start(self):\n",
+        "    self.play.start()\n",
+        "\n",
+        "  def print_board(self):\n",
+        "    print(self.play)\n",
+        "\n",
+        "  def rotate_board(self):\n",
+        "    self.play.rotate_board()\n",
+        "\n",
+        "  def clear_first_black_move(self, item):\n",
+        "    for p in self.list_pieces.start_chess_list:\n",
+        "      if p.name == item:\n",
+        "        self.play.player1.delete_start_piece(p.x, p.y)\n",
+        "\n",
+        "  def white_move(self, item, x, y):\n",
+        "    self.play.move_white_player(item, x, y)\n",
+        "\n",
+        "  def black_move(self, item, x, y):\n",
+        "    self.play.move_black_player(item, x, y)\n",
+        "\n",
+        "\n",
+        "\n",
+        "s = Service()\n",
+        "s.start()\n",
+        "s.print_board()\n",
         "print('---------------------------')\n",
-        "p.move_white_player(white_king, 'e', '2')\n",
-        "print(p)\n",
+        "s.white_move('white_king', 'e', '2')\n",
+        "s.print_board()\n",
         "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '7')\n",
-        "print(p)\n",
+        "s.rotate_board()\n",
+        "s.print_board()\n",
         "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'e', '3')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '6')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'e', '4')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'e', '5')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_white_player(white_king, 'f', '4')\n",
-        "print(p)\n",
-        "print('---------------------------')\n",
-        "p.rotate_board()\n",
-        "p.move_black_player(black_king, 'f', '5')\n",
-        "print(p)\n",
-        "print('---------------------------')"
+        "s.clear_first_black_move('black_king')\n",
+        "s.black_move('black_king', 'e', '7')\n",
+        "s.print_board()"
       ]
     }
   ]
