--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhGdMn1Icd0kjAW82h9Xx7",
+      "authorship_tag": "ABX9TyNtBjlGNvMhXRMP4WHuM0UG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,62 +28,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 41,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 476
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "8e2ded38-2213-4745-d262-b8a333611574"
+        "outputId": "3a192897-1f02-474d-ca82-ec6ff7713f69"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e2\n",
-            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
-            "---------------------------\n",
-            "e7\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+            "Введите имя 1 игрока:\n",
+            "asd\n",
+            "Введите имя 2 игрока:\n",
+            "asd\n",
+            "Введите ход:\n",
+            "asd\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36m<cell line: 240>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    238\u001b[0m   \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    236\u001b[0m   \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m   \u001b[0;31m# v.start()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 238\u001b[0;31m   \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mwhite_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpresenter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mwhite_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[0mold_vertical\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[0mnew_horizontal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m     \u001b[0mnew_vertical\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mold_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mold_vertical\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_vertical\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     \u001b[0;31m# place = input(\"Введите поле:\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
-        "\n",
+        "from abc import ABC, abstractmethod\n",
         "\n",
         "class Board:\n",
         "  def __init__(self):\n",
@@ -160,9 +144,8 @@
         "        piece.y = y_new\n",
         "\n",
         "class Player:\n",
-        "  def __init__(self, name, color, list_pieces):\n",
+        "  def __init__(self, name, list_pieces):\n",
         "    self.__name = name\n",
-        "    self.__color = color\n",
         "    self.__game = Game(list_pieces)\n",
         "\n",
         "  @property\n",
@@ -184,9 +167,9 @@
         "\n",
         "\n",
         "class Play:\n",
-        "  def __init__(self, list_pieces):\n",
-        "    self.__player1 = Player('alex', 0, list_pieces)\n",
-        "    self.__player2 = Player('ann', 1, list_pieces)\n",
+        "  def __init__(self, name1, name2, list_pieces):\n",
+        "    self.__player1 = Player(name1, list_pieces)\n",
+        "    self.__player2 = Player(name2, list_pieces)\n",
         "    self.__color = True\n",
         "\n",
         "  def __str__(self):\n",
@@ -242,9 +225,11 @@
         "\n",
         "\n",
         "class Service:\n",
-        "  def __init__(self):\n",
+        "  def __init__(self, name1, name2):\n",
+        "    self.name1 = name1\n",
+        "    self.name2 = name2\n",
         "    self.list_pieces = ListPieces()\n",
-        "    self.play = Play(self.list_pieces.start_chess_list)\n",
+        "    self.play = Play(name1, name2, self.list_pieces.start_chess_list)\n",
         "\n",
         "  def start(self):\n",
         "    self.play.start()\n",
@@ -261,26 +246,66 @@
         "        self.play.player1.delete_start_piece(p.x, p.y)\n",
         "\n",
         "  def white_move(self, item, x, y):\n",
+        "    print(f\"Ход {self.name1}\")\n",
         "    self.play.move_white_player(item, x, y)\n",
         "\n",
         "  def black_move(self, item, x, y):\n",
+        "    print(f\"Ход {self.name2}\")\n",
         "    self.play.move_black_player(item, x, y)\n",
         "\n",
         "\n",
+        "class Presenter:\n",
+        "  def __init__(self):\n",
+        "    self.name1 = input(\"Введите имя 1 игрока:\\n\")\n",
+        "    self.name2 = input(\"Введите имя 2 игрока:\\n\")\n",
+        "    self.service = Service(self.name1, self.name2)\n",
         "\n",
-        "s = Service()\n",
-        "s.start()\n",
-        "s.print_board()\n",
-        "print('---------------------------')\n",
-        "s.white_move('white_king', 'e', '2')\n",
-        "s.print_board()\n",
-        "print('---------------------------')\n",
-        "s.rotate_board()\n",
-        "s.print_board()\n",
-        "print('---------------------------')\n",
-        "s.clear_first_black_move('black_king')\n",
-        "s.black_move('black_king', 'e', '7')\n",
-        "s.print_board()"
+        "  def start(self):\n",
+        "    self.service.start()\n",
+        "\n",
+        "  def print_board(self):\n",
+        "    self.service.print_board()\n",
+        "\n",
+        "  def white_move(self):\n",
+        "    item = input(\"Введите ход:\\n\")\n",
+        "    old_horizontal = item[0]\n",
+        "    old_vertical = item[1]\n",
+        "    new_horizontal = item[2]\n",
+        "    new_vertical = item[3]\n",
+        "    print(old_horizontal, old_vertical, new_horizontal, new_vertical)\n",
+        "    # place = input(\"Введите поле:\")\n",
+        "    # horizontal = input(\"Введите ujhbpjy\")\n",
+        "    # vertical = input(\"d\")\n",
+        "    # self.service.white_move()\n",
+        "\n",
+        "\n",
+        "class View:\n",
+        "  def __init__(self):\n",
+        "    self.presenter = Presenter()\n",
+        "    self.work = True\n",
+        "\n",
+        "  def start_new_game(self):\n",
+        "    self.move_counter = 0\n",
+        "    self.presenter.start()\n",
+        "    while self.work:\n",
+        "      self.presenter.print_board()\n",
+        "\n",
+        "  def finish(self):\n",
+        "    print(\"Выход\")\n",
+        "    self.work = False\n",
+        "\n",
+        "  def white_move(self):\n",
+        "    self.presenter.white_move()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  v = View()\n",
+        "  # v.start()\n",
+        "  v.white_move()\n",
+        "\n",
+        "main()"
       ]
     }
   ]
