--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtBjlGNvMhXRMP4WHuM0UG",
+      "authorship_tag": "ABX9TyOsoV1/BIaWM/6pjHl8D/is",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,40 +28,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 54,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 476
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "3a192897-1f02-474d-ca82-ec6ff7713f69"
+        "outputId": "9b0e39fd-fbd2-4445-fb36-e3108058abcc"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Введите имя 1 игрока:\n",
-            "asd\n",
-            "Введите имя 2 игрока:\n",
-            "asd\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
             "Введите ход:\n",
-            "asd\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36m<cell line: 240>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    238\u001b[0m   \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    236\u001b[0m   \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m   \u001b[0;31m# v.start()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 238\u001b[0;31m   \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    239\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    240\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mwhite_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpresenter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhite_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-41-7015182059d1>\u001b[0m in \u001b[0;36mwhite_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[0mold_vertical\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[0mnew_horizontal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m     \u001b[0mnew_vertical\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mold_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mold_vertical\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_vertical\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     \u001b[0;31m# place = input(\"Введите поле:\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+            "e1e2\n",
+            "7 4 6 4\n",
+            "Ход ann\n",
+            "7,4,6,4\n",
+            "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n"
           ]
         }
       ],
@@ -135,9 +143,9 @@
         "  def delete_start_piece(self, x, y):\n",
         "    self.__new_board.delete_piece(x, y)\n",
         "\n",
-        "  def move(self, item, x_new, y_new):\n",
+        "  def move(self, x_old, y_old, x_new, y_new):\n",
         "    for piece in self.__chess_pieces:\n",
-        "      if piece.name == item:\n",
+        "      if piece.x == x_old & piece.y == y_old:\n",
         "        self.__new_board.delete_piece(piece.x, piece.y)\n",
         "        self.__new_board.set_piece(x_new, y_new)\n",
         "        piece.x = x_new\n",
@@ -162,8 +170,8 @@
         "  def delete_start_piece(self, x, y):\n",
         "    self.__game.delete_start_piece(x, y)\n",
         "\n",
-        "  def move(self, item, x_new, y_new):\n",
-        "    self.__game.move(item, x_new, y_new)\n",
+        "  def move(self, x_old, y_old, x_new, y_new):\n",
+        "    self.__game.move(x_old, y_old, x_new, y_new)\n",
         "\n",
         "\n",
         "class Play:\n",
@@ -196,21 +204,21 @@
         "      self.__player1.game.board = np.rot90(board, 2)\n",
         "      self.__color = True\n",
         "\n",
-        "  def move_white_player(self, item, x, y):\n",
-        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
-        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
-        "    y_new = int(horizontal[x])\n",
-        "    x_new = int(vertical[y])\n",
-        "    print(f'{x}{y}')\n",
-        "    self.__player1.move(item, x_new, y_new)\n",
+        "  def move_white_player(self, x_old, y_old, x_new, y_new):\n",
+        "    # horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
+        "    # vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
+        "    # y_new = int(horizontal[x])\n",
+        "    # x_new = int(vertical[y])\n",
+        "    print(f'{x_old},{y_old},{x_new},{y_new}')\n",
+        "    self.__player1.move(x_old, y_old, x_new, y_new)\n",
         "\n",
-        "  def move_black_player(self, item, x, y):\n",
-        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
-        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
-        "    y_new = int(horizontal[x])\n",
-        "    x_new = int(vertical[y])\n",
-        "    print(f'{x}{y}')\n",
-        "    self.__player2.move(item, x_new, y_new)\n",
+        "  # def move_black_player(self, x_old, y_old, x_new, y_new):\n",
+        "  #   # horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
+        "  #   # vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
+        "  #   # y_new = int(horizontal[x])\n",
+        "  #   # x_new = int(vertical[y])\n",
+        "  #   print(f'{x_old},{y_old},{x_new},{y_new}')\n",
+        "  #   self.__player2.move(x_old, y_old, x_new, y_new)\n",
         "\n",
         "\n",
         "class ListPieces:\n",
@@ -240,24 +248,26 @@
         "  def rotate_board(self):\n",
         "    self.play.rotate_board()\n",
         "\n",
-        "  def clear_first_black_move(self, item):\n",
-        "    for p in self.list_pieces.start_chess_list:\n",
-        "      if p.name == item:\n",
-        "        self.play.player1.delete_start_piece(p.x, p.y)\n",
+        "  # def clear_first_black_move(self, x_old, y_old):\n",
+        "  #   for piece in self.list_pieces.start_chess_list:\n",
+        "  #     if piece.x == x_old & piece.y == y_old:\n",
+        "  #       self.play.player1.delete_start_piece(piece.x, piece.y)\n",
         "\n",
-        "  def white_move(self, item, x, y):\n",
+        "  def white_move(self, x_old, y_old, x_new, y_new):\n",
         "    print(f\"Ход {self.name1}\")\n",
-        "    self.play.move_white_player(item, x, y)\n",
+        "    self.play.move_white_player(x_old, y_old, x_new, y_new)\n",
         "\n",
-        "  def black_move(self, item, x, y):\n",
+        "  def black_move(self, x_old, y_old, x_new, y_new):\n",
         "    print(f\"Ход {self.name2}\")\n",
-        "    self.play.move_black_player(item, x, y)\n",
+        "    self.play.move_black_player(x_old, y_old, x_new, y_new)\n",
         "\n",
         "\n",
         "class Presenter:\n",
         "  def __init__(self):\n",
-        "    self.name1 = input(\"Введите имя 1 игрока:\\n\")\n",
-        "    self.name2 = input(\"Введите имя 2 игрока:\\n\")\n",
+        "    # self.name1 = input(\"Введите имя 1 игрока:\\n\")\n",
+        "    # self.name2 = input(\"Введите имя 2 игрока:\\n\")\n",
+        "    self.name1 = 'ann'\n",
+        "    self.name2 = 'mike'\n",
         "    self.service = Service(self.name1, self.name2)\n",
         "\n",
         "  def start(self):\n",
@@ -266,17 +276,39 @@
         "  def print_board(self):\n",
         "    self.service.print_board()\n",
         "\n",
+        "  def rotate_board(self):\n",
+        "    self.service.rotate_board()\n",
+        "\n",
         "  def white_move(self):\n",
         "    item = input(\"Введите ход:\\n\")\n",
         "    old_horizontal = item[0]\n",
         "    old_vertical = item[1]\n",
         "    new_horizontal = item[2]\n",
         "    new_vertical = item[3]\n",
-        "    print(old_horizontal, old_vertical, new_horizontal, new_vertical)\n",
-        "    # place = input(\"Введите поле:\")\n",
-        "    # horizontal = input(\"Введите ujhbpjy\")\n",
-        "    # vertical = input(\"d\")\n",
-        "    # self.service.white_move()\n",
+        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
+        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
+        "    y_old = int(horizontal[old_horizontal])\n",
+        "    x_old = int(vertical[old_vertical])\n",
+        "    y_new = int(horizontal[new_horizontal])\n",
+        "    x_new = int(vertical[new_vertical])\n",
+        "    print(x_old, y_old, x_new, y_new)\n",
+        "    self.service.white_move(x_old, y_old, x_new, y_new)\n",
+        "\n",
+        "  def black_move(self):\n",
+        "    item = input(\"Введите ход:\\n\")\n",
+        "    old_horizontal = item[0]\n",
+        "    old_vertical = item[1]\n",
+        "    new_horizontal = item[2]\n",
+        "    new_vertical = item[3]\n",
+        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
+        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
+        "    y_old = int(horizontal[old_horizontal])\n",
+        "    x_old = int(vertical[old_vertical])\n",
+        "    y_new = int(horizontal[new_horizontal])\n",
+        "    x_new = int(vertical[new_vertical])\n",
+        "    print(x_old, y_old, x_new, y_new)\n",
+        "    self.service.black_move(x_old, y_old, x_new, y_new)\n",
+        "    # self.service.clear_first_black_move(x_old, y_old)\n",
         "\n",
         "\n",
         "class View:\n",
@@ -286,24 +318,21 @@
         "\n",
         "  def start_new_game(self):\n",
         "    self.move_counter = 0\n",
+        "    self.presenter.print_board()\n",
         "    self.presenter.start()\n",
-        "    while self.work:\n",
-        "      self.presenter.print_board()\n",
+        "    self.presenter.print_board()\n",
+        "    self.presenter.white_move()\n",
+        "    self.presenter.print_board()\n",
+        "\n",
         "\n",
         "  def finish(self):\n",
         "    print(\"Выход\")\n",
         "    self.work = False\n",
         "\n",
-        "  def white_move(self):\n",
-        "    self.presenter.white_move()\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "def main():\n",
         "  v = View()\n",
-        "  # v.start()\n",
-        "  v.white_move()\n",
+        "  v.start_new_game()\n",
         "\n",
         "main()"
       ]
